# swarm

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/swarm/: config.py  logging.py
src/swarm/agents/: __init__.py  base.py  critic.py  registry.py  worker.py
src/swarm/api/: main.py
src/swarm/llm/: __init__.py  gemini_client.py
src/swarm/memory/: __init__.py  filesystem_store.py  store.py
src/swarm/orchestrator/: __init__.py  router.py  swarm.py
tests/: test_smoke.py
